# MyForest

./: global.gradle  settings.gradle
ForScreenRecord/: build.gradle
ForScreenRecord/src/main/: AndroidManifest.xml
ForScreenRecord/src/main/java/com/forest/forscreenrecord/: RecordManager.java  RecorderService.java
ForScreenRecord/src/main/java/com/forest/forscreenrecord/audio/: AudioRecThread.java  AudioTool.java
app/: build.gradle
app/libs/: imeilib.aar
app/src/androidTest/java/com/forest/myforest/: ExampleInstrumentedTest.java  RandomFile.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/forest/myforest/: FirstFragment.java  MainActivity.java  SecondFragment.java
app/src/main/res/layout/: activity_main.xml  fragment_second.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/forest/myforest/: ExampleUnitTest.java
fffmpeg/: CMakeLists.txt  build.gradle
fffmpeg/src/androidTest/java/com/forest/fffmpeg/: ExampleInstrumentedTest.java
fffmpeg/src/main/: AndroidManifest.xml
fffmpeg/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  FoFFmpeg.cpp  FoFFmpeg.h  JavaCallHelper.cpp  JavaCallHelper.h  VideoChannel.cpp  VideoChannel.h  fffmpeg-native-lib.cpp  macro.h
fffmpeg/src/main/java/com/forest/fffmpeg/: FOPlayer.java  PlayActivity.java
fffmpeg/src/main/res/layout/: activity_play.xml
fffmpeg/src/test/java/com/forest/fffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+23 files in other folders)
